Working implementation using Javalin and CF