@@ -14,8 +14,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.sparkjava:spark-core:2.7.2'
+    compile 'io.javalin:javalin:2.0.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+    compile 'org.slf4j:slf4j-simple:1.7.25'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -24,6 +25,7 @@ run {
     inputs.property("moduleName", moduleName)
     doFirst {
         jvmArgs = [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                 '--module-path', classpath.asPath,
                 '--module', mainClassName
         ]
@@ -36,6 +38,7 @@ startScripts {
     doFirst {
         classpath = files()
         defaultJvmOpts = [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                 '--module-path', 'APP_HOME_LIBS',
                 '--module', mainClassName
         ]
@@ -48,6 +51,7 @@ afterEvaluate {
         inputs.property("moduleName", moduleName)
         doFirst {
             options.compilerArgs = [
+                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                     '--module-path', classpath.asPath,
             ]
             classpath = files()
